--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,6 @@
 MONGOURI=mongodb+srv://clatpath-admin:Ar9JWBLs5Yfm7kF@myclatdb.ignnz.mongodb.net/userDB
+MONGOLOCAL=mongodb://localhost:27017/myclatDB
+JWT_KEY=secret
+JWT_COOKIE_EXPIRE=12h
+JWT_EXPIRE=12h
+NODE_ENV=development
