error handle in login

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 MONGOURI=mongodb+srv://clatpath-admin:Ar9JWBLs5Yfm7kF@myclatdb.ignnz.mongodb.net/userDB
 MONGOLOCAL=mongodb://localhost:27017/myclatDB
 JWT_KEY=secret
-JWT_COOKIE_EXPIRE=12h
+JWT_SECRET=abcd12345@#
+JWT_COOKIE_EXPIRE=1h
 JWT_EXPIRE=12h
 NODE_ENV=development
